--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Markdown Live Previewer</title>
-  <link href="/output.css" rel="stylesheet">
+  <link href="/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
   <style>
     /* Custom scrollbar styling for a more polished look */
@@ -54,9 +54,6 @@
   </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900">
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
   <div id="root"></div>
   
   <!-- Main application script -->
