--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Markdown Live Previewer</title>
   <link href="/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark-dimmed.min.css">
   <style>
     /* Custom scrollbar styling for a more polished look */
-    ::-webkit-scrollbar {
+    /* ::-webkit-scrollbar {
       width: 8px;
       height: 8px;
     }
@@ -29,27 +29,6 @@
       margin: 0;
       padding: 0;
       overflow: hidden; /* Prevent body scrollbars when app manages its own scrolling */
-    }
-    /* Styling for highlighted code blocks */
-    .prose .hljs { /* Ensure hljs styles apply within prose */
-      background-color: #282c34; /* Match atom-one-dark background */
-      color: #abb2bf; /* Match atom-one-dark foreground */
-      padding: 1em;
-      border-radius: 0.375rem; /* Tailwind's md radius */
-      overflow-x: auto;
-    }
-    
-    line {
-      fill: white!important;
-      stroke: white!important;
-    }
-
-    path {
-      stroke: white!important;
-    }
-
-    text.messageText {
-      fill: white!important;
     }
   </style>
 </head>
